--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- 
+      Welcome to my project submission for Shopify 2021 Fall Internship!
+
+
+
+      My contact info:
+      Name: Sheng Gen Jin
+      Phone: 647-324-8889
+      Email: carter.jin6487@gmail.com
+
+
+
+     -->
+
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
